--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,38 +1,39 @@
-# SIAC Scrapping Configuration File
-
-siac:
-  login:
-  password:
-  login_url: "https://alunoweb.ufba.br/SiacWWW/Welcome.do"
-
-base_url: "https://alunoweb.ufba.br/SiacWWW/"
-completed_courses_url: "https://alunoweb.ufba.br/SiacWWW/ConsultarCoeficienteRendimento.do"
-pdf_download_path: "downloads/completed_courses.pdf"
-
-webdriver:
-  driver_path: "drivers/chromedriver"
-  headless: true    # Set true for headless browser execution
-
-timeout:
-  page_load: 20      # Max time (seconds) to wait for page to load
-  element: 10        # Max time (seconds) to wait for an element to appear
+base_url: https://alunoweb.ufba.br/SiacWWW/
+completed_courses_url: https://alunoweb.ufba.br/SiacWWW/ConsultarCoeficienteRendimento.do
 
 log:
-  dir: "logs/logs"
-  general_log_file: "general_log"
-  return_log_file: "return_log"
-  log_file_extension: ".log"
+  dir: logs/logs
+  general_log_file: general_log
+  return_log_file: return_log
+  log_file_extension: .log
 
 notion:
-  window_title: "Notion - Auth - v1.0.0-beta1"
-  token: ""
-  main_database_id: ""
-  timeline_database_id: ""
-  rr_database_id: ""
-  url: "https://api.notion.com/v1"
-  button_text: "Authenticate"
+  button_text: Authenticate
   config_fields:
-    - "Notion Token"
-    - "Main Database ID"
-    - "Timeline Database ID"
-    - "Rejection Database ID"
+    - Notion Token
+    - Main Database ID
+    - Timeline Database ID
+    - Rejection Database ID
+  url: https://api.notion.com/v1
+  window_title: Notion - Auth - v1.0.0-beta.2
+
+notion_login:
+  main_db_id: ''
+  rr_db_id: ''
+  timeline_db_id: ''
+  token: ''
+
+siac:
+  login: null
+  password: null
+  login_url: https://alunoweb.ufba.br/SiacWWW/Welcome.do
+
+timeout:
+  element: 10
+  page_load: 20
+
+title: Siac Scrapping Sync - v1.0.0-beta.2
+
+webdriver:
+  driver_path: drivers/chromedriver
+  headless: true
